--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bce87c">  <td>23/02/01 16:50:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobWorkRoughListPageTest.Verify_Navigation()[pri:1, instance:com.qa.testcases.inwardlist.JobWorkRoughListPageTest@738dc9b]">Verify_Navigation</td> 
-  <td>main@1732238286</td>   <td></td> </tr>
-<tr bgcolor="bce87c">  <td>23/02/01 16:51:29</td>   <td>45032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobWorkRoughListPageTest.Verify_fill_data_BillEntryDetails()[pri:5, instance:com.qa.testcases.inwardlist.JobWorkRoughListPageTest@738dc9b]">Verify_fill_data_BillEntryDetails</td> 
-  <td>main@1732238286</td>   <td></td> </tr>
-<tr bgcolor="bce87c">  <td>23/02/01 16:51:32</td>   <td>47257</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobWorkRoughListPageTest.Verify_fill_data_CorrespondingInvoice()[pri:6, instance:com.qa.testcases.inwardlist.JobWorkRoughListPageTest@738dc9b]">Verify_fill_data_CorrespondingInvoice</td> 
-  <td>main@1732238286</td>   <td></td> </tr>
-<tr bgcolor="bce87c">  <td>23/02/01 16:51:23</td>   <td>39002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobWorkRoughListPageTest.Verify_fill_data_KPCertificateDetails()[pri:4, instance:com.qa.testcases.inwardlist.JobWorkRoughListPageTest@738dc9b]">Verify_fill_data_KPCertificateDetails</td> 
-  <td>main@1732238286</td>   <td></td> </tr>
-<tr bgcolor="bce87c">  <td>23/02/01 16:51:42</td>   <td>57964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobWorkRoughListPageTest.Verify_fill_data_MiningInformation()[pri:7, instance:com.qa.testcases.inwardlist.JobWorkRoughListPageTest@738dc9b]">Verify_fill_data_MiningInformation</td> 
-  <td>main@1732238286</td>   <td></td> </tr>
-<tr bgcolor="bce87c">  <td>23/02/01 16:50:51</td>   <td>6388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobWorkRoughListPageTest.Verify_filldata_DocumentDeatils()[pri:3, instance:com.qa.testcases.inwardlist.JobWorkRoughListPageTest@738dc9b]">Verify_filldata_DocumentDeatils</td> 
-  <td>main@1732238286</td>   <td></td> </tr>
-<tr bgcolor="bce87c">  <td>23/02/01 16:50:51</td>   <td>6264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobWorkRoughListPageTest.Verify_inwardbutton_click()[pri:2, instance:com.qa.testcases.inwardlist.JobWorkRoughListPageTest@738dc9b]">Verify_inwardbutton_click</td> 
-  <td>main@1732238286</td>   <td></td> </tr>
-<tr bgcolor="bce87c">  <td>23/02/01 16:50:38</td>   <td>-6342</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;JobWorkRoughListPageTest.setup()[pri:0, instance:com.qa.testcases.inwardlist.JobWorkRoughListPageTest@738dc9b]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1732238286</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/02/02 16:03:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JobWorkInspectionListPageTest.Verify_Navigation()[pri:1, instance:com.qa.testcases.inwardlist.JobWorkInspectionListPageTest@1a6d8329]">Verify_Navigation</td> 
+  <td>main@1816725203</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/02/02 16:03:29</td>   <td>-4506</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;JobWorkInspectionListPageTest.setup()[pri:0, instance:com.qa.testcases.inwardlist.JobWorkInspectionListPageTest@1a6d8329]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816725203</td>   <td></td> </tr>
 </table>
